adding device query
